--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -56,7 +56,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install inkscape
-      run: apt-get install inkscape
+      run: sudo apt-get install inkscape
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
