--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
     
         # A file, directory or wildcard pattern that describes what to upload
         # Required.
-        path: build/CAPTURinoPlugin
+        path: build/CapturinoPlugin
     
         # The desired behavior if no files are found using the provided path.
         # Available Options:
