--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ name: Create Release
 
 jobs:
   build:
-    name: Build Release
+    name: Build Upload Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -29,55 +29,52 @@ jobs:
         # Execute tests defined by the CMake configuration.
         # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
         run: ctest -C Release
-      - uses: actions/upload-artifact@v4
-        with:
+      - name: Rename Ubuntu Binary
+        run: mv CAPTURinoPlugin CAPTURinoPlugin_ubuntu
+  # TODO uploading the artifact here and downloading it later takes a lot of time
+  #    - uses: actions/upload-artifact@v4
+  #      with:
           # Name of the artifact to upload.
           # Optional. Default is 'artifact'
-          name: CAPTURinoPlugin ubuntu ${{ github.ref }}
+  #        name: CAPTURinoPlugin ubuntu ${{ github.ref }}
           # A file, directory or wildcard pattern that describes what to upload
           # Required.
-          path: build/CapturinoPlugin
+  #        path: build/CapturinoPlugin
           # The desired behavior if no files are found using the provided path.
           # Available Options:
           #   warn: Output a warning but do not fail the action
           #   error: Fail the action with an error message
           #   ignore: Do not output any warnings or errors, the action does not fail
           # Optional. Default is 'warn'
-          if-no-files-found: warn
+  #        if-no-files-found: warn
           # Duration after which artifact will expire in days. 0 means using default retention.
           # Minimum 1 day.
           # Maximum 90 days unless changed from the repository settings page.
           # Optional. Defaults to repository settings.
-          retention-days: 1
+  #        retention-days: 1
           # The level of compression for Zlib to be applied to the artifact archive.
           # The value can range from 0 to 9.
           # For large files that are not easily compressed, a value of 0 is recommended for significantly faster uploads.
           # Optional. Default is '6'
-          compression-level: 0
+  #        compression-level: 0
       
           # If true, an artifact with a matching name will be deleted before a new one is uploaded.
           # If false, the action will fail if an artifact for the given name already exists.
           # Does not fail if the artifact does not exist.
           # Optional. Default is 'false'
-          overwrite: false
+  #        overwrite: false
           # Whether to include hidden files in the provided path in the artifact
           # The file contents of any hidden files in the path should be validated before
           # enabled this to avoid uploading sensitive information.
           # Optional. Default is 'false'
-          include-hidden-files: false
+  #        include-hidden-files: false
   #######################
   # TODO
   # use mingw to build the binary for windows 64-bit
   # upload that artifact as 
   # name: CAPTURinoPlugin win64 ${{ github.ref }}
   #######################
-  
-  release:      
-    name: Create Release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -92,13 +89,13 @@ jobs:
             - Second Change
           draft: false
           prerelease: true
-      - name: Download Artifacts
-        uses: actions/download-artifact@v5
-        with:
+  #    - name: Download Artifacts
+  #      uses: actions/download-artifact@v5
+  #      with:
           # Name of the artifact to download.
           # If unspecified, all artifacts for the run are downloaded.
           # Optional.
-          name: CAPTURinoPlugin ubuntu ${{ github.ref }}
+  #        name: CAPTURinoPlugin ubuntu ${{ github.ref }}
       
           # IDs of the artifacts to download, comma-separated.
           # Either inputs `artifact-ids` or `name` can be used, but not both.
@@ -142,6 +139,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./CAPTURinoPlugin win64 ${{ github.ref }}.zip
-          asset_name: CAPTURinoPlugin win64 ${{ github.ref }}.zip
+          asset_path: ./CAPTURinoPlugin_ubuntu
+          asset_name: CAPTURinoPlugin_ubuntu_${{ github.ref }}.zip
           asset_content_type: application/zip
