--- a/.github/workflows/build_ubuntu.yml
+++ b/.github/workflows/build_ubuntu.yml
@@ -1,11 +1,11 @@
-name: Build Ubuntu
+name: Test Build Ubuntu
 
 on:
   workflow_dispatch:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Release
+  BUILD_TYPE: Debug
 
 jobs:
   build:
@@ -32,44 +32,44 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
 
-    - uses: actions/upload-artifact@v4
-      with:
-        # Name of the artifact to upload.
-        # Optional. Default is 'artifact'
-        name: CAPTURinoPlugin
-    
-        # A file, directory or wildcard pattern that describes what to upload
-        # Required.
-        path: build/CapturinoPlugin
-    
-        # The desired behavior if no files are found using the provided path.
-        # Available Options:
-        #   warn: Output a warning but do not fail the action
-        #   error: Fail the action with an error message
-        #   ignore: Do not output any warnings or errors, the action does not fail
-        # Optional. Default is 'warn'
-        if-no-files-found: warn
-    
-        # Duration after which artifact will expire in days. 0 means using default retention.
-        # Minimum 1 day.
-        # Maximum 90 days unless changed from the repository settings page.
-        # Optional. Defaults to repository settings.
-        retention-days: 1
-    
-        # The level of compression for Zlib to be applied to the artifact archive.
-        # The value can range from 0 to 9.
-        # For large files that are not easily compressed, a value of 0 is recommended for significantly faster uploads.
-        # Optional. Default is '6'
-        compression-level: 0
-    
-        # If true, an artifact with a matching name will be deleted before a new one is uploaded.
-        # If false, the action will fail if an artifact for the given name already exists.
-        # Does not fail if the artifact does not exist.
-        # Optional. Default is 'false'
-        overwrite: false
-    
-        # Whether to include hidden files in the provided path in the artifact
-        # The file contents of any hidden files in the path should be validated before
-        # enabled this to avoid uploading sensitive information.
-        # Optional. Default is 'false'
-        include-hidden-files: false
+#    - uses: actions/upload-artifact@v4
+#      with:
+#        # Name of the artifact to upload.
+#        # Optional. Default is 'artifact'
+#        name: CAPTURinoPlugin
+#    
+#        # A file, directory or wildcard pattern that describes what to upload
+#        # Required.
+#        path: build/CapturinoPlugin
+#    
+#        # The desired behavior if no files are found using the provided path.
+#        # Available Options:
+#        #   warn: Output a warning but do not fail the action
+#        #   error: Fail the action with an error message
+#        #   ignore: Do not output any warnings or errors, the action does not fail
+#        # Optional. Default is 'warn'
+#        if-no-files-found: warn
+#    
+#        # Duration after which artifact will expire in days. 0 means using default retention.
+#        # Minimum 1 day.
+#        # Maximum 90 days unless changed from the repository settings page.
+#        # Optional. Defaults to repository settings.
+#        retention-days: 1
+#    
+#        # The level of compression for Zlib to be applied to the artifact archive.
+#        # The value can range from 0 to 9.
+#        # For large files that are not easily compressed, a value of 0 is recommended for significantly faster uploads.
+#        # Optional. Default is '6'
+#        compression-level: 0
+#    
+#        # If true, an artifact with a matching name will be deleted before a new one is uploaded.
+#        # If false, the action will fail if an artifact for the given name already exists.
+#        # Does not fail if the artifact does not exist.
+#        # Optional. Default is 'false'
+#        overwrite: false
+#    
+#        # Whether to include hidden files in the provided path in the artifact
+#        # The file contents of any hidden files in the path should be validated before
+#        # enabled this to avoid uploading sensitive information.
+#        # Optional. Default is 'false'
+#        include-hidden-files: false
