--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -38,19 +38,6 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
-      
-    - name: get tag string
-      id: get-tag
-      uses: actions/github-script@0.9.0
-      with:
-        tag_name: ${{ github.ref }}
-        script: |
-              const tagName = core.getInput('tag_name', { required: true });
-              const tag = tagName.replace('refs/tags/', '');
-              core.setOutput('tag', tag)
-                
-    - name: zip Binary
-      run: zip CAPTURinoPlugin_win64_${{steps.get-tag.outputs.tag}}.zip build/Release/CapturinoPlugin 
 
     - uses: actions/upload-artifact@v4
       with:
@@ -60,7 +47,7 @@ jobs:
     
         # A file, directory or wildcard pattern that describes what to upload
         # Required.
-        path: CAPTURinoPlugin_win64_${{steps.get-tag.outputs.tag}}.zip
+        path: build/Release/CapturinoPlugin
     
         # The desired behavior if no files are found using the provided path.
         # Available Options:
@@ -117,19 +104,6 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
-    
-    - name: get tag string
-      id: get-tag
-      uses: actions/github-script@0.9.0
-      with:
-        tag_name: ${{ github.ref }}
-        script: |
-              const tagName = core.getInput('tag_name', { required: true });
-              const tag = tagName.replace('refs/tags/', '');
-              core.setOutput('tag', tag)
-    
-    - name: gzip Binary
-      run: tar -czf CAPTURinoPlugin_ubuntu_${{steps.get-tag.outputs.tag}}.tar.gz build/CapturinoPlugin
 
     - uses: actions/upload-artifact@v4
       with:
@@ -139,7 +113,7 @@ jobs:
    
         # A file, directory or wildcard pattern that describes what to upload
         # Required.
-        path: CAPTURinoPlugin_ubuntu_${{steps.get-tag.outputs.tag}}.tar.gz
+        path: build/CapturinoPlugin
     
         # The desired behavior if no files are found using the provided path.
         # Available Options:
@@ -199,6 +173,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: CAPTURinoPlugin_win64
+
+      - name: zip Windows Binary
+        run: zip CAPTURinoPlugin_win64_${{steps.get-tag.outputs.tag}}.zip build/Release/CapturinoPlugin 
+
+      - name: gzip Ubuntu Binary
+        run: tar -czf CAPTURinoPlugin_ubuntu_${{steps.get-tag.outputs.tag}}.tar.gz build/CapturinoPlugin
 
       - name: Create Release
         id: create_release
