let cmake generate the version string

--- a/generic/CMakeLists.txt
+++ b/generic/CMakeLists.txt
@@ -9,5 +9,6 @@ target_include_directories(generic PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../compat)
 set_target_properties(generic PROPERTIES LINKER_LANGUAGE C)
 target_link_libraries(generic PUBLIC libmodules)
 target_link_libraries(generic PUBLIC capturelib)
+target_include_directories(generic PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
 target_include_directories(generic PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../lib)
 target_include_directories(generic PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/capturelib)
