--- a/version.h.in
+++ b/version.h.in
@@ -1,8 +1,9 @@
 #ifndef VERSION_H_INCLUDED
 #define VERSION_H_INCLUDED
 
-#define CMAKE_PROJECT_VERSION_MAJOR "@PROJECT_VERSION_MAJOR@"
-#define CMAKE_PROJECT_VERSION_MINOR "@PROJECT_VERSION_MINOR@"
-#define CMAKE_PROJECT_VERSION_PATCH "@PROJECT_VERSION_PATCH@"
+#define CMAKE_PROJECT_VERSION_MAJOR     "@PROJECT_VERSION_MAJOR@"
+#define CMAKE_PROJECT_VERSION_MINOR     "@PROJECT_VERSION_MINOR@"
+#define CMAKE_PROJECT_VERSION_PATCH     "@PROJECT_VERSION_PATCH@"
+#define CMAKE_PROJECT_VERSION_STABILITY "@PROJECT_VERSION_STABILITY@"
 
 #endif /* VERSION_H_INCLUDED */
