--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -37,7 +37,7 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
+      run: ctest -C ${{env.BUILD_TYPE}} -R "Release_[ ]*"
 
     - uses: actions/upload-artifact@v4
       with:
@@ -103,7 +103,7 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
+      run: ctest -C ${{env.BUILD_TYPE}} -R "Release_[ ]*"
 
     - uses: actions/upload-artifact@v4
       with:
